force-app/main/default/objects/DeploymentStatusEvent__e/DeploymentStatusEvent__e.object-meta.xml
<CustomObject>
    <label>Deployment Status Event</label>
    <pluralLabel>Deployment Status Events</pluralLabel>
</CustomObject>