force-app/main/default/objects/DeploymentStatusEvent__e/fields/DeploymentJobId__c.field-meta.xml
<CustomField>
    <fullName>DeploymentJobId__c</fullName>
    <label>Deployment Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>