force-app/main/default/objects/DeploymentStatusEvent__e/fields/WaveNumber__c.field-meta.xml
<CustomField>
    <fullName>WaveNumber__c</fullName>
    <label>Wave Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>